# flowmason

./: .env.example  .gitignore  BUILD_SCRIPTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE_EXPLANATION.md  MIGRATION_COMPLETE.md  README.md  SECURITY.md  book.toml  docker-compose.yml
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  error.rs  jwt.rs  lib.rs  middleware.rs  user.rs
crates/bricks/: Cargo.toml
crates/bricks/src/: http_client.rs  hubspot_brick.rs  lib.rs  mapper_bricks.rs  n8n_brick.rs  notion_brick.rs  nvidia_brick.rs  odoo_brick.rs  openai_brick.rs  rules_brick.rs
crates/core/: Cargo.toml
crates/core/src/: brick_traits.rs  flow_runner.rs  lib.rs  mapper.rs  quota.rs  retry.rs  rules_engine.rs  types.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_initial.sql  002_add_templates.sql  003_add_audit_logs.sql  004_add_failed_executions.sql
crates/db/src/: connection.rs  lib.rs
crates/db/src/repositories/: api_key_repository.rs  execution_data_repository.rs  execution_repository.rs  flow_repository.rs  mod.rs  scheduled_flow_repository.rs  template_repository.rs  usage_log_repository.rs  user_repository.rs
crates/meter/: Cargo.toml
crates/meter/src/: lib.rs  usage_log.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: cron_executor.rs  lib.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  SUMMARY.md  TROUBLESHOOTING.md  concepts.md  contributing.md  examples.md  getting-started.md  introduction.md
docs/api/: authentication.md  executions.md  flows.md  overview.md  scheduler.md  usage.md
docs/bricks/: combine-text.md  conditional.md  field-mapping.md  hubspot.md  n8n.md  notion.md  nvidia.md  odoo.md  openai.md
examples/: README.md
examples/connections/: combine-text-example.json  conditional-example.json  field-mapping-example.json
examples/integrations/: hubspot-example.json  n8n-example.json  notion-example.json  nvidia-example.json  odoo-example.json  openai-example.json
examples/workflows/: ai-content-to-notion.json  customer-enrichment.json  hubspot-deal-creation.json  hubspot-to-notion.json  n8n-webhook-pipeline.json  webhook-to-odoo.json
services/api/: Cargo.toml
services/api/src/: audit.rs  error.rs  lib.rs  main.rs  queue.rs  server.rs  validation.rs
services/api/src/dto/: brick.rs  execution.rs  flow.rs  mod.rs  pagination.rs  scheduler.rs  template.rs  usage.rs
services/api/src/middleware/: mod.rs  rate_limit_headers.rs  request_id.rs
services/api/src/routes/: auth.rs  bricks.rs  executions.rs  flows.rs  mod.rs  scheduler.rs  templates.rs  usage.rs  web.rs  webhooks.rs
services/api/src/templates/: components.rs  mod.rs  predefined.rs
services/api/templates/: base.html
services/api/tests/: integration_test.rs
services/api/tests/common/: mod.rs
services/tui/: Cargo.toml
services/tui/src/: main.rs
services/ui_builder/: Cargo.toml
services/ui_builder/src/: lib.rs  mapping_schema_json.rs
services/web-ui/: BUILD.md  Cargo.toml  Dioxus.toml  MIGRATION_SUMMARY.md  QUICKSTART.md  STATUS.md  TROUBLESHOOTING.md  index.html
services/web-ui-vite/: Dockerfile  README.md  index.html  package.json  vite.config.ts
services/web-ui-vite/src/: App.tsx  router.tsx
services/web-ui-vite/src/api/: client.ts
services/web-ui-vite/src/components/flow-builder/: BrickConfigForm.tsx  BrickNode.tsx  BrickPalette.tsx  FlowBuilder.tsx  FlowCanvas.tsx  index.ts
services/web-ui-vite/src/components/layouts/: AdminLayout.tsx  Sidebar.tsx  TopNav.tsx  index.ts
services/web-ui-vite/src/components/ui/: ConfirmModal.tsx  DataTable.tsx  EmptyState.tsx  FlowCard.tsx  OnboardingPanel.tsx  StatsCard.tsx  StatusBadge.tsx  icons.tsx  index.ts
services/web-ui-vite/src/pages/: Dashboard.tsx  Documentation.tsx  EditFlow.tsx  Executions.tsx  FlowDetail.tsx  Flows.tsx  Mapping.tsx  Metering.tsx  NewFlow.tsx  Scheduler.tsx  Settings.tsx  Templates.tsx
services/web-ui/src/: api.rs  app.rs  lib.rs  main.rs  router.rs  state.rs
services/web-ui/src/components/: brick_config_form.rs  brick_node.rs  brick_palette.rs  flow_builder.rs  flow_metadata_form.rs  mod.rs
services/web-ui/src/components/layouts/: admin_layout.rs  mod.rs  sidebar.rs  top_nav.rs
services/web-ui/src/components/ui/: breadcrumbs.rs  confirm_modal.rs  data_table.rs  empty_state.rs  flow_card.rs  guided_tour.rs  icons.rs  mod.rs  onboarding_panel.rs  stats_card.rs  status_badge.rs
services/web-ui/src/pages/: dashboard.rs  documentation.rs  executions.rs  flows.rs  mapping.rs  metering.rs  mod.rs  scheduler.rs  settings.rs  templates.rs
services/worker/: Cargo.toml
services/worker/src/: lib.rs  sync_executor.rs
web-ui/: next.config.js  package-lock.json  package.json  tailwind.config.js
web-ui/app/: globals.css  layout.tsx  page.tsx
web-ui/app/executions/: page.tsx
web-ui/app/flows/: page.tsx
web-ui/app/flows/[id]/: page.tsx
web-ui/app/flows/new/: page.tsx
web-ui/app/mapping/: page.tsx
web-ui/app/metering/: page.tsx
web-ui/app/scheduler/: page.tsx
web-ui/app/templates/: page.tsx
web-ui/components/layouts/: AdminLayout.tsx  Sidebar.tsx  TopNav.tsx
web-ui/components/ui/: ConfirmModal.tsx  DataTable.tsx  FlowCard.tsx  StatsCard.tsx  StatusBadge.tsx
web-ui/lib/: api.ts
