[package]
name = "flowmason-bricks"
version.workspace = true
edition.workspace = true

[dependencies]
flowmason-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

