[package]
name = "flowmason-db"
version.workspace = true
edition.workspace = true

[dependencies]
flowmason-core = { path = "../core" }
flowmason-auth = { path = "../auth" }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }

