[package]
name = "flowmason-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
flowmason-core = { path = "../core" }
flowmason-bricks = { path = "../bricks" }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

