[package]
name = "flowmason-api"
version.workspace = true
edition.workspace = true

[dependencies]
flowmason-core = { path = "../../crates/core" }
flowmason-bricks = { path = "../../crates/bricks" }
flowmason-meter = { path = "../../crates/meter" }
flowmason-scheduler = { path = "../../crates/scheduler" }
flowmason-db = { path = "../../crates/db" }
flowmason-auth = { path = "../../crates/auth" }
axum = { workspace = true }
tower = { workspace = true, features = ["timeout", "make"] }
tower-http = { workspace = true, features = ["fs", "cors", "trace"] }
hyper = { version = "0.14", features = ["full"] }
tower-governor = { version = "0.2", package = "tower_governor" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bcrypt = "0.15"
askama = { version = "0.12" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1.10"
lazy_static = "1.4"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"

