[package]
name = "flowmason-web-ui"
version.workspace = true
edition.workspace = true

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
dioxus-web = "0.6"
dioxus-router = "0.6"
dioxus-logger = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = "0.6"
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
log = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[features]
default = ["web"]
web = []

[lib]
name = "flowmason_web_ui"
path = "src/lib.rs"

[[bin]]
name = "flowmason-web-ui"
path = "src/main.rs"

