[package]
name = "flowmason-web-ui"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
dioxus-web = "0.6"
dioxus-router = "0.6"
dioxus-logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
log = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[features]
default = ["web"]
web = []

[lib]
name = "flowmason_web_ui"
path = "src/lib.rs"

[[bin]]
name = "flowmason-web-ui"
path = "src/main.rs"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

